--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -26,6 +26,7 @@ html {
 }
 
 body {
+  overflow-x: hidden;
   font-family: "Be Vietnam", sans-serif;
 }
 
